@@ -246,6 +246,15 @@ public class RangeTestCase extends RestletTestCase {
         assertEquals(1, response.getEntity().getRange().getIndex());
         assertEquals(9, response.getEntity().getRange().getSize());
 
+        request.setRanges(Arrays.asList(new Range(2, 1000)));
+        response = client.handle(request);
+        assertEquals(Status.SUCCESS_PARTIAL_CONTENT, response.getStatus());
+        assertEquals("34567890", response.getEntity().getText());
+        assertEquals(10, response.getEntity().getSize());
+        assertEquals(8, response.getEntity().getAvailableSize());
+        assertEquals(2, response.getEntity().getRange().getIndex());
+        assertEquals(8, response.getEntity().getRange().getSize());
+
         client.stop();
     }
 
